embedded/adc_sample/build_log0.txt
Build started: Project: adc_sample
*** Using Compiler 'V6.16', folder: 'd:\Keil_v5\ARM\ARMCLANG\Bin'
Build target 'flashcode'
../application/fifo/fifo.c(7): warning: In file included from...../application/fifo/fifo.h(11): warning: In file included from...../source\sys.h(14): error: 'stm32_dsp.h' file not found
#include "stm32_dsp.h"
         ^~~~~~~~~~~~~
1 error generated.
compiling fifo.c...
../common/pt32z192xx_it.c(33): warning: In file included from...../source\sys.h(14): error: 'stm32_dsp.h' file not found
#include "stm32_dsp.h"
         ^~~~~~~~~~~~~
1 error generated.
compiling pt32z192xx_it.c...
assembling startup_pt32z192.s...
../source/main.c(1): warning: In file included from...../source\sys.h(14): error: 'stm32_dsp.h' file not found
#include "stm32_dsp.h"
         ^~~~~~~~~~~~~
1 error generated.
compiling main.c...
compiling system_pt32z192xx.c...
../application/app/app.c(1): warning: In file included from...../application/app\app.h(4): warning: In file included from...../source\sys.h(14): error: 'stm32_dsp.h' file not found
#include "stm32_dsp.h"
         ^~~~~~~~~~~~~
1 error generated.
compiling app.c...
compiling pt32z192xx_adc.c...
compiling pt32z192xx_dsp.c...
compiling pt32z192xx_misc.c...
compiling pt32z192xx_gpio.c...
compiling pt32z192xx_spi.c...
compiling pt32z192xx_sys.c...
compiling pt32z192xx_i2c.c...
compiling pt32z192xx_tim.c...
compiling pt32z192xx_pwm.c...
compiling pt32z192xx_uart.c...
compiling pt32z192xx_wdg.c...
compiling pt32z192xx_serial.c...
../driver/src/pt32z192xx_retarget.c(10): warning: In file included from...../source\sys.h(14): error: 'stm32_dsp.h' file not found
#include "stm32_dsp.h"
         ^~~~~~~~~~~~~
1 error generated.
compiling pt32z192xx_retarget.c...
compiling pt32z192xx_dma.c...
compiling pt32z192xx_qspi.c...
compiling SEGGER_HardFaultHandler.c...
compiling SEGGER_RTT_printf.c...
compiling ansi.c...
assembling HardFaultHandler.S...
compiling nr_micro_shell_commands.c...
compiling ansi_port.c...
compiling SEGGER_RTT.c...
compiling nr_micro_shell.c...
".\output\flashcode\flashcode.axf" - 5 Error(s), 0 Warning(s).
Target not created.
Build Time Elapsed:  00:00:02
